# Forgetti

./: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  DeleteDialog.qml  GroupsModel.cpp  GroupsModel.h  GroupsView.qml  ItemsModel.cpp  ItemsModel.h  ItemsRun.qml  ItemsView.qml  Main.qml  README.md  RenameDialog.qml  application.qrc  main.cpp  qtquickcontrols2.conf
custom/: DeleteDialog.qml  RenameDialog.qml
